fix some bugs, update contact form css and style, fix wrap bug in home post list

--- a/client/src/app/feature/contact/contact.component.scss
+++ b/client/src/app/feature/contact/contact.component.scss
@@ -58,18 +58,20 @@
           textarea {
             width: 100%;
             padding: 10px;
+            background-color: transparent;
             border: 1px solid var(--translucent-color);
             border-radius: 5px;
             font-size: 13px;
 
             &:focus {
-              border-color: var(--translucent-color);
-              background-color: #fff;
+              border-color: var(--font-color);
+              background-color: var(--translucent-color);
               outline: none;
             }
           }
 
           textarea {
+            background-color: transparent;
             height: 100px;
             resize: none;
           }
