--- a/client/src/app/feature/posts/components/posts-list/posts-list.component.scss
+++ b/client/src/app/feature/posts/components/posts-list/posts-list.component.scss
@@ -1,6 +1,6 @@
 .post-list {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: start;
   gap: 30px;
 }
